--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,7 @@ set -g @catppuccin_status_default "on"
 set -g @catppuccin_status_background "default"
 set -g @catppuccin_gitmux_text "#(gitmux -cfg $HOME/.gitmux.conf \"#{pane_current_path}\")"
 
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @catppuccin_status_modules_right "cpu date_time gitmux"
+set -g @catppuccin_status_modules_right "cpu date_time"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_fill "all"
