--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -6,14 +6,14 @@ import = [
   # "~/.config/alacritty/rose-pine.toml"
 ]
 [font]
-size = 15.0
+size = 16.0
 
 [font.normal]
 family = "FiraCode Nerd Font"
 style = "Regular"
 
 [window]
-opacity = 0.95
+opacity = 1.0
 
 [window.padding]
 x = 15
@@ -21,6 +21,7 @@ y = 15
 
 [shell]
 program = "/bin/zsh"
+# program = "/opt/homebrew/bin/fish"
 args = ["-l"]
 
 [env]
