--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -9,7 +9,11 @@ remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
 
+background_opacity 0.85
+
 window_padding_width 15
+
+macos_show_window_title_in none
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
