--- a/.skhdrc
+++ b/.skhdrc
@@ -29,6 +29,7 @@ shift + alt - t : yabai -m window --toggle float --grid 4:4:1:1:2:2
 
 # maximize a window
 shift + alt - m : yabai -m window --toggle zoom-fullscreen
+Â : yabai -m window --toggle zoom-fullscreen
 
 # balance out tree of windows (resize to occupy same area)
 shift + alt - e : yabai -m space --balance
