--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,13 @@
 font_family      JetbrainsMono Nerd Font Medium
+font_size 16.0
+
+# font_family      Dank Mono Italic
+# font_size 17.0
+
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 16.0
 
 remember_window_size  yes
 initial_window_width  640
