--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,11 @@ bind-key n select-pane -D
 bind-key e select-pane -U
 bind-key i select-pane -R
 
+bind -n C-H resize-pane -L 2
+bind -n C-I resize-pane -R 2
+bind -n C-E resize-pane -U 2
+bind -n C-N resize-pane -D 2
+
 # [env]
 # term = "xterm-256color"
 # put both line in alacrity.toml
