bug fix cant tab from tmux config conflict

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,14 +10,11 @@ bind-key n select-pane -D
 bind-key e select-pane -U
 bind-key i select-pane -R
 
-bind -n C-H resize-pane -L 2
-bind -n C-I resize-pane -R 2
-bind -n C-E resize-pane -U 2
-bind -n C-N resize-pane -D 2
+# bind -n C-H resize-pane -L 2
+# bind -n C-I resize-pane -R 2
+# bind -n C-E resize-pane -U 2
+# bind -n C-N resize-pane -D 2
 
-# [env]
-# term = "xterm-256color"
-# put both line in alacrity.toml
 set -g default-terminal "$TERM"
 set -ag terminal-overrides ",$TERM:Tc"
 set -g pane-active-border-style bg=color0
@@ -71,8 +68,9 @@ set -g @catppuccin_window_number_position "left"
 
 set -g @catppuccin_status_default "on"
 set -g @catppuccin_status_background "default"
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
-set -g @catppuccin_status_modules_right "date_time"
+set -g @catppuccin_status_modules_right "cpu date_time"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_fill "all"
