--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      JetbrainsMono Nerd Font Medium
+font_family      JetBrainsMono Nerd Font Mono Medium
 font_size 16.0
 
 # font_family      Dank Mono Italic
