--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,7 +15,7 @@ initial_window_height 400
 
 background_opacity 0.85
 
-# window_padding_width 15
+window_padding_width 15
 
 macos_show_window_title_in none
 
