--- a/.air.toml
+++ b/.air.toml
@@ -39,10 +39,10 @@ tmp_dir = "tmp"
   time = false
 
 [misc]
-  clean_on_exit = false
+  clean_on_exit = true
 
 [proxy]
-  app_port = 0
+  app_port = 8080
   enabled = false
   proxy_port = 0
 
