--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,7 @@ bind-key i select-pane -R
 # bind -n C-N resize-pane -D 2
 
 set -g default-terminal "$TERM"
+set-option -g status-position top
 set -ag terminal-overrides ",$TERM:Tc"
 set -g pane-active-border-style bg=color0
 set -g pane-border-style bg=color0
