--- a/.air.toml
+++ b/.air.toml
@@ -22,7 +22,7 @@ tmp_dir = "tmp"
   poll_interval = 0
   post_cmd = []
   pre_cmd = []
-  rerun = false
+  rerun = true
   rerun_delay = 500
   send_interrupt = true
   stop_on_error = false
