feat: add nixos config

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,11 @@
-font_family      JetBrainsMono Nerd Font Mono Medium
-font_size 16.0
+# font_family      JetBrainsMono Nerd Font Mono Medium
+font_size 13.0
 
 # font_family      Dank Mono Italic
 # font_size 17.0
-
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
 
 remember_window_size  yes
@@ -23,3 +22,12 @@ macos_show_window_title_in none
 # Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="JetBrains Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
+shell /etc/profiles/per-user/inkz/bin/zsh
