--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -30,4 +30,4 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 # END_KITTY_FONTS
-shell /etc/profiles/per-user/inkz/bin/zsh
+shell .
