--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,13 @@ bind-key n select-pane -D
 bind-key e select-pane -U
 bind-key i select-pane -R
 
-# bind -n C-H resize-pane -L 2
-# bind -n C-I resize-pane -R 2
-# bind -n C-E resize-pane -U 2
-# bind -n C-N resize-pane -D 2
+bind -n C-H resize-pane -L 2
+bind -n C-I resize-pane -R 2
+bind -n C-E resize-pane -U 2
+bind -n C-N resize-pane -D 2
 
-set -g default-terminal "$TERM"
+# set -g default-terminal "$TERM"
+set-option -g default-shell /run/current-system/sw/bin/zsh
 set-option -g status-position top
 set -ag terminal-overrides ",$TERM:Tc"
 set -g pane-active-border-style bg=color0
