--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-# font_family      JetBrainsMono Nerd Font Mono Medium
+font_family      JetBrainsMono Nerd Font Mono Medium
 font_size 13.0
 
 # font_family      Dank Mono Italic
@@ -25,7 +25,7 @@ include current-theme.conf
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="JetBrains Mono"
+# font_family      family="JetBrains Mono"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
