--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -15,6 +15,7 @@ initial_window_height 400
 background_opacity 0.8
 
 window_padding_width 15
+macos_option_as_alt yes
 
 macos_show_window_title_in none
 
