--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,7 +12,7 @@ remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
 
-background_opacity 0.8
+background_opacity 0.9
 
 window_padding_width 15
 macos_option_as_alt yes
@@ -21,7 +21,8 @@ macos_show_window_title_in none
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
-include current-theme.conf
+# include current-theme.conf
+include rose-pine-moon.conf
 # END_KITTY_THEME
 
 
