--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -24,6 +24,10 @@ macos_show_window_title_in none
 # include current-theme.conf
 include rose-pine-moon.conf
 # END_KITTY_THEME
+#
+
+cursor #E9B1CD
+
 
 
 # BEGIN_KITTY_FONTS
