--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'rose-pine/tmux'
 set -g @rose_pine_variant 'moon' # Options are 'main', 'moon' or 'dawn'
 set -g @rose_pine_host 'on' # Enables hostname in the status bar
-set -g @rose_pine_date_time '' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_date_time 'no' # It accepts the date UNIX command format (man date for info)
 set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
 set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
 set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
@@ -72,7 +72,7 @@ set -g @rose_pine_window_count '5' # Specify a number of windows, if there are m
 set -g @rose_pine_status_left_prepend_section '#{tmux_mode_indicator}'
 set -g @rose_pine_status_left_append_section 'It works'
 set -g @rose_pine_status_right_prepend_section 'with normal text'
-set -g @rose_pine_status_right_append_section 'too'
+set -g @rose_pine_status_right_append_section 'too | CPU: $(top -bn1 | grep "Cpu(s)" | sed "s/.*, *\\([0-9.]*\\)%* id.*/\\1/" | awk "{printf \\"%.1f\\", 100 - $1}")% '
 
 # Other examples:
 
