--- a/.config/git/config
+++ b/.config/git/config
@@ -6,6 +6,7 @@
     compression = 9  # trade cpu for network
     fsync = none
     whitespace = error  # threat incorrect whitespace as errors
+    excludesfile = ~/.config/git/ignore
 
 [blame]
     coloring = highlightRecent
