--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family      JetBrainsMono Nerd Font Mono Bold
+font_family      JetBrainsMono Nerd Font Mono
 font_size 13.0
 
 # font_family      Dank Mono Italic
@@ -13,6 +13,7 @@ initial_window_width  640
 initial_window_height 400
 
 background_opacity 0.9
+background_blur 20
 
 window_padding_width 15
 macos_option_as_alt yes
@@ -22,13 +23,14 @@ macos_show_window_title_in none
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
 # include current-theme.conf
-include rose-pine-moon.conf
+# include rose-pine-moon.conf
+include tokyo-night-moon.conf
 # END_KITTY_THEME
 #
 
 cursor #E9B1CD
 
-
+mouse_hide_wait 2.0
 
 # BEGIN_KITTY_FONTS
 # font_family      family="JetBrains Mono"
