--- a/local/docker-compose.local.yml
+++ b/local/docker-compose.local.yml
@@ -11,14 +11,12 @@ services:
       - 27017:27017
     healthcheck:
       test: >
-        echo "try { rs.status() } catch (err) { 
-        rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'localhost:27017'}]}) 
-        }" | mongosh --port 27017 --quiet
+        echo "try { rs.status() } catch (err) {  rs.initiate({_id: 'rs0', members: [{_id: 0, host: 'localhost:27017'}]})  }" | mongosh --port 27017 --quiet
+
       interval: 5s
       timeout: 30s
       start_period: 0s
       retries: 30
-
   redis:
     image: redis:latest
     container_name: redis
@@ -26,12 +24,14 @@ services:
     ports:
       - 6379:6379
     command: ["redis-server", "--appendonly", "yes"]
+    environment:
+      REDIS_PASSWORD: "admin"
+      REDIS_USERNAME: "admin"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       timeout: 10s
       retries: 5
-
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -49,7 +49,6 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
-
   nginx-proxy-manager:
     image: "jc21/nginx-proxy-manager:latest"
     container_name: nginx-proxy-manager
@@ -70,7 +69,6 @@ services:
       - npm-letsencrypt:/etc/letsencrypt
     depends_on:
       - postgres
-
 volumes:
   postgres-data:
   mongo-data:
