--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,11 +18,15 @@ bind -n C-N resize-pane -D 2
 # set -g default-terminal "$TERM"
 set-option -g status-position top
 set -ag terminal-overrides ",$TERM:Tc"
-set -g pane-active-border-style bg=color0
-set -g pane-border-style bg=color0
 set-window-option -g window-active-style fg=terminal,bg=terminal
 set-window-option -g window-style fg=terminal,bg=terminal
 # set -a terminal-overrides ",xterm-256color:RGB"
+
+set -g pane-border-status top
+set -g pane-border-format "#P: #T"
+set -g pane-border-style bg=color0
+set -g pane-border-lines "double"
+set -g pane-active-border-style bg=color0
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
