--- a/local/docker-compose.kafka.yml
+++ b/local/docker-compose.kafka.yml
@@ -1,4 +1,3 @@
-version: '3'
 networks:
   local-kafka:
     driver: bridge
@@ -32,12 +31,13 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT_INTERNAL:PLAINTEXT,PLAINTEXT_L:PLAINTEXT,PLAINTEXT_C:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
       KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
-      KAFKA_SASL_MECHANISM_INTER_BROKER: PLAINTEXT # Use PLAINTEXT for internal communication
+      KAFKA_SASL_MECHANISM_INTER_BROKER: PLAINTEXT
       KAFKA_JAAS_CONFIG: |
         org.apache.kafka.common.security.plain.PlainLoginModule required
         username="myuser"
         password="mypassword"
-        user_myuser="mypassword";
+        user_myuser="mypassword"
+        user_anotheruser="anotherpassword";
   kafka-ui:
     image: provectuslabs/kafka-ui
     container_name: kafka-ui
