--- a/.air.toml
+++ b/.air.toml
@@ -20,7 +20,7 @@ tmp_dir = "tmp"
   log = "build-errors.log"
   poll = false
   poll_interval = 0
-  post_cmd = ["direnv deny"]
+  post_cmd = []
   pre_cmd = ["direnv allow"]
   rerun = true
   rerun_delay = 2000
