--- a/local/docker-compose.local.yml
+++ b/local/docker-compose.local.yml
@@ -1,7 +1,7 @@
 # version: "3.8"
 services:
   mongodb:
-    image: mongo:latest
+    image:
     container_name: mongodb
     restart: always
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
